--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.11"
 flask = "^2.2.2"
 pytest = "^7.2.0"
 locust = "^2.13.0"
+coverage = "^7.0.3"
 
 [build-system]
 requires = ["poetry-core"]
