--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,6 +7,7 @@ repos:
       - id: check-docstring-first
       - id: debug-statements
       - id: name-tests-test
+        exclude: ^tests/helpers
       - id: no-commit-to-branch
         args: [ -b, main ]
   - repo: https://github.com/pycqa/pylint
@@ -33,5 +34,9 @@ repos:
       - id: mypy
         additional_dependencies:
           - pytest
+          - inflection
+          - marshmallow
+          - flask
+          - werkzeug
         args:
           - --explicit-package-bases
