--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -39,5 +39,8 @@ repos:
           - flask
           - werkzeug
           - locust
+          - apispec
+          - apispec_webframeworks
+          - flask_swagger_ui
         args:
           - --explicit-package-bases
